# DailyHot-Pro

./: README.md  components.d.ts  index.html  package-lock.json  package.json  vite.config.ts
src/: Application.vue  application.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src/api/: index.ts  request.ts
src/assets/: index.scss  pace-style.scss
src/components/: HomeFooter.vue  HomeHeader.vue  HotItem.vue
src/components/style/: HomeFooter.scss  HomeHeader.scss  HotItem.scss
src/dialog/: AboutDialog.vue  HotDetailDialog.vue
src/dialog/style/: AboutDialog.scss  HotDetailDialog.scss
src/pages/: HomePage.vue
src/pages/style/: HomePage.scss
src/router/: index.ts
src/scripts/: appScript.ts  config.ts  devtool.ts  getTime.ts  hotList.ts  utils.ts
src/service/: DialogService.ts
src/service/impl/: DialogServiceImpl.ts
src/stores/: applicationStore.ts
src/types/: index.d.ts
